# 6-sem

./: .gitignore  LICENSE
algorytmy_optymalizacji/lab1/: CMakeLists.txt  graph.cc  graph.h  graph_algorithms.cc  graph_algorithms.h  main.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
algorytmy_optymalizacji/lab2/: zad1.jl  zad2.jl  zad3.jl  zad4.jl  zad5.jl
algorytmy_optymalizacji/lab3/: CMakeLists.txt  dijkstra.cpp  test.cpp
algorytmy_optymalizacji/lab3/include/: algorithms.h  fileread.h  graph_utill.h
algorytmy_optymalizacji/lab3/res/: Long-C.0.0.p2p  Long-C.0.0.ss.res  USA-road-d.CTR.p2p.res_bh  USA-road-d.CTR.ss.res_bh  USA-road-d.CTR.ss.res_dial  USA-road-d.CTR.ss.res_rdx  tests.sh
algorytmy_optymalizacji/lab3/src/: algorithms.cpp  fileread.cpp  graph_utill.cc
algorytmy_optymalizacji/lab4/: CMakeLists.txt  bipartite.cpp  bipartite_output.wtf  cube_output.wtf  graph_utill.cc  graph_utill.h  hypercube.cpp  solver.cpp  solver.h  solver.jl
algorytmy_optymalizacji/wykłady/: w1
kombinatoryka_analityczna/lab1_25_10/: zad10.py  zad32.py  zad9.py
kombinatoryka_analityczna/lab2_22_11/: zad48.py  zad49.py
kombinatoryka_analityczna/lab3_29_11/: coefficients.txt  fisher-yates.py  generating_function.m  generative_data.txt  matlab.mat  plot.py  plot_65.fig  ploys74.py  untitled.fig
kombinatoryka_analityczna/lab4_7_12/: zad80.py
mobilne/lab0/: settings.gradle
mobilne/wykłady/: local.properties
sztuczna_inteligencja/cyferki/: CMakeLists.txt  re_lu_L1  re_lu_L1.cpp  re_lu_L2  re_lu_L2.cpp  xor  (+10 more)
sztuczna_inteligencja/pietnastka/: BetterPriorityQueue.cpp  BetterPriorityQueue.h  CMakeLists.txt  heuristics.cpp  heuristics.h  main.cpp  solver.cpp  solver.h
(+255 files in other folders)
